# advent

./: LICENSE  README.md  advent.cabal
advent2015/: advent2015.cabal  package.yaml
advent2015/input/: Seven.example2
advent2015/src/Advent/: TwentyFifteen.hs
advent2015/src/Advent/TwentyFifteen/: Eight.hs  Eleven.hs  Fifteen.hs  Five.hs  Four.hs  Fourteen.hs  Nine.hs  One.hs  Seven.hs  Six.hs  SixB.hs  Ten.hs  Thirteen.hs  Three.hs  Twelve.hs  Twentythree.hs  Twentytwo.hs  Two.hs
advent2016/: advent2016.cabal  package.yaml
advent2016/input/: Eight.ex1
advent2016/src/Advent/: TwentySixteen.hs
advent2016/src/Advent/TwentySixteen/: Eight.hs  Eighteen.hs  Eleven.hs  Fifteen.hs  Five.hs  Four.hs  Fourteen.hs  Nine.hs  Nineteen.hs  One.hs  Seven.hs  Seventeen.hs  Six.hs  Sixteen.hs  Ten.hs  Thirteen.hs  Three.hs  Twelve.hs  Twenty.hs  Twentyone.hs  Twentythree.hs  Two.hs
advent2017/: advent2017.cabal  package.yaml  stack.yaml
advent2017/src/Advent/: TwentySeventeen.hs
advent2017/src/Advent/TwentySeventeen/: Eight.hs  Eighteen.hs  Four.hs  Nine.hs  One.hs  Seven.hs  Seventeen.hs  Six.hs  Sixteen.hs  Three.hs  Twelve.hs  TwentyThree.hs  Two.hs
advent2018/: advent2018.cabal  package.yaml  stack.yaml
advent2018/src/Advent/: TwentyEighteen.hs
advent2018/src/Advent/TwentyEighteen/: Eight.hs  Eighteen.hs  Five.hs  Four.hs  Fourteen.hs  Nine.hs  NineB.hs  Nineteen.hs  One.hs  Seven.hs  SevenB.hs  Six.hs  Sixteen.hs  Ten.hs  Three.hs  Twelve.hs  Two.hs
input/2016/: Twentythree.input
src/: Advent.hs  Library.hs  Main.hs
src/Advent/: Library.hs  TwentyFifteen.hs  TwentySeventeen.hs  TwentySixteen.hs
src/Advent/TwentyFifteen/: Seven.hs  Thirteen.hs  Three.hs
src/Advent/TwentySeventeen/: Eighteen.hs  Eleven.hs  Fifteen.hs  Five.hs  Four.hs  One.hs  Seventeen.hs  Six.hs  Twelve.hs  Two.hs
src/Advent/TwentySixteen/: Eighteen.hs  Five.hs  Four.hs  Fourteen.hs  Main.hs  One.hs  Six.hs  Sixteen.hs  Ten.hs  Thirteen.hs  Twelve.hs  Twentyone.hs  Twentythree.hs  Two.hs
src/TwentyFifteen/: Eight.hs  Eleven.hs  Fifteen.hs  Five.hs  Four.hs  Fourteen.hs  One.hs  Six.hs  SixB.hs  Ten.hs  Twelve.hs  Twentythree.hs  Two.hs
src/TwentySixteen/: Eight.hs  Eleven.hs  Fifteen.hs  Nine.hs  Nineteen.hs  Seven.hs  Seventeen.hs  Three.hs  Twenty.hs  Twentyone.hs
