name:                advent
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/kandersen/advent
license:             BSD3
license-file:        LICENSE
author:              Kristoffer Just Andersen
maintainer:          kja@cs.au.dk
copyright:           2017 Kristoffer Just Andersen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  default-language:  Haskell2010
  ghc-options: -O2 -Wall -fwarn-incomplete-patterns -fwarn-incomplete-record-updates -fwarn-unused-matches -fwarn-unused-imports -fwarn-unused-binds -fwarn-dodgy-exports -fwarn-dodgy-imports
  build-depends: base
               , megaparsec
               , bytestring
               , pureMD5
               , mtl
               , containers
               , array
               , either
               , microlens-platform
  exposed-modules: Advent.Library
                 , Advent.Library.Trie
                 , Advent.TwentyFifteen
                 , Advent.TwentySeventeen
                 , Advent.TwentySeventeen.One
                 , Advent.TwentySeventeen.Two
                 , Advent.TwentySeventeen.Three
                 , Advent.TwentySeventeen.Four
                 , Advent.TwentySeventeen.Five              
                 , Advent.TwentySeventeen.Six
                 , Advent.TwentySeventeen.Eight
                 , Advent.TwentySeventeen.Nine
                 , Advent.TwentySeventeen.Eleven
                 , Advent.TwentySeventeen.Twelve
                 , Advent.TwentySeventeen.Fifteen
                 , Advent.TwentySeventeen.Sixteen
                 , Advent.TwentySeventeen.Seventeen
                 , Advent.TwentySeventeen.Eighteen
                 , Advent.TwentySeventeen.TwentyThree


executable advent
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -O2
  other-modules: Advent.Library
               , Advent.Library.Trie
               , Advent.TwentyFifteen
               , Advent.TwentySeventeen
               , Advent.TwentySeventeen.One
               , Advent.TwentySeventeen.Two
               , Advent.TwentySeventeen.Three
               , Advent.TwentySeventeen.Four
               , Advent.TwentySeventeen.Five
               , Advent.TwentySeventeen.Six
               , Advent.TwentySeventeen.Eight
               , Advent.TwentySeventeen.Nine
               , Advent.TwentySeventeen.Eleven
               , Advent.TwentySeventeen.Twelve
               , Advent.TwentySeventeen.Fifteen
               , Advent.TwentySeventeen.Sixteen
               , Advent.TwentySeventeen.Seventeen
               , Advent.TwentySeventeen.Eighteen
               , Advent.TwentySeventeen.TwentyThree

  build-depends:       advent
                     , base
                     , megaparsec
                     , bytestring
                     , pureMD5
                     , mtl
                     , containers
                     , microlens-platform
                     , either
                     , array
